fix: fix scrollbar heigh for better presentation

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ code {
 }
 
 ::-webkit-scrollbar {
-  height: 4px;
+  height: 6px;
   width: 4px;
   background: gray;
 }
